src/styles/layouts/_header.scss
header {
    position: fixed;
    z-index: 9999;
    top: 0;
    left: 0;
    width: 100%;
    background-color: white;
    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);

    // .header-content {
    //     max-width: 1300px;
    //     display: flex;
    //     justify-content: space-between;
    //     align-items: center;
    //     padding: 3rem 2.5rem;

    //     margin: auto;
    // }

    // h1 {
    //     position: relative;
    //     display: flex;
    //     align-items: center;
    //     color: $black;
    //     margin: 0;
    //     z-index: 9999;

    //     &:hover {
    //         color: $primary-color;
    //     }

    //     span {
    //         margin: -3px 5px 0 0;
    //         font-size: 3.2rem;
    //     }
    // }

    // .right {
    //     @media screen and (min-width: 1024px) {
    //         display: flex;
    //         align-items: center;
    //     }
    //     display: none;
    // }
}

.header-content {
    max-width: 1300px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 3rem 2.5rem;

    margin: auto;
}

h1 {
    position: relative;
    display: flex;
    align-items: center;
    color: $black;
    margin: 0;
    z-index: 9999;

    &:hover {
        color: $primary-color;
    }

    span {
        margin: -3px 5px 0 0;
        font-size: 3.2rem;
    }
}

.right {
    @media screen and (min-width: 1024px) {
        display: flex;
        align-items: center;
    }
    display: none;
}

nav ul {
    display: flex;

    li {
        @media screen and (min-width: 1024px) {
            margin-right: 3rem;
        }
        position: relative;
        font-size: 1.6rem;

        &.back {
            @media screen and (min-width: 1024px) {
                display: none;
            }
            display: inline-block;
            cursor: pointer;
            display: flex;
            align-items: center;
            font-size: 1.6rem;
            color: $dark-gray;
            margin-bottom: 3rem;

            &:hover {
                color: $primary-color;

                svg path {
                    fill: $primary-color;
                }
            }

            svg {
                width: 15px;
                height: 15px;
                transform: rotate(-180deg);
                margin-right: 1rem;

                path {
                    fill: $dark-gray;
                }
            }
        }

        a,
        p {
            justify-content: space-between;
            color: $dark-gray;
            margin: 0;
            cursor: pointer;
            transition: 0.27s ease;
            display: flex;
            align-items: center;

            &.active {
                color: $primary-color;
            }

            &:hover {
                color: $primary-color;
            }

            &:hover svg path {
                fill: $primary-color;
            }

            svg {
                @media screen and (min-width: 1024px) {
                    display: none;
                }
                width: 15px;
                height: 15px;
            }
        }

        a {
            svg {
                @media screen and (min-width: 1024px) {
                    display: none;
                }
                width: 15px;
                height: 15px;
                transform: rotate(0deg);
                margin-right: 0;
            }
        }

        &:hover ul {
            display: flex;
        }

        ul {
            @media screen and (min-width: 1024px) {
                width: 336px;
                height: auto;
                left: initial;
                margin-top: 9.5rem;
                padding: 2rem 2rem;
                display: none;
                box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.05);
                flex-wrap: wrap;
                transform: translateX(0);
                opacity: 1;
                visibility: visible;
                pointer-events: all;
            }

            &:before {
                content: '';
                position: absolute;
                top: 0;
                left: 0;
                width: 50px;
                height: 3.8rem;
                margin-top: -3.8rem;
                z-index: 0;
            }

            position: fixed;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            transform: translateX(100%);
            background-color: white;
            transition: 0.3s ease;
            opacity: 0;
            visibility: hidden;
            pointer-events: none;
            padding: 14.3rem 2.5rem 0rem;

            &.active {
                transform: translateX(0);
                opacity: 1;
                pointer-events: all;
                visibility: visible;
                z-index: 1;
            }

            li {
                @media screen and (min-width: 1024px) {
                    flex: 1 0 40%;
                }
                line-height: 1.5;
            }
        }
    }
}

.mobile-menu {
    @media screen and (min-width: 1024px) {
        display: none;
    }
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    transform: translateY(-100%);
    background-color: white;
    opacity: 0;
    transition: 0.27s ease;
    overflow-y: scroll;
    overflow-x: hidden;

    a,
    p {
        font-size: 1.6rem;
    }

    nav {
        margin-top: 3rem;
    }

    li {
        margin-bottom: 1rem;
    }
}

.mobile-menu-wrapper {
    padding: 14.7rem 2.5rem 0;
    display: flex;
    flex-direction: column;

    #search {
        order: 1;

        input {
            width: 100%;
        }
    }

    nav {
        order: 2;

        ul {
            flex-direction: column;
        }
    }
}

.mobile-active .mobile-menu {
    transform: translateY(0);
    opacity: 1;
}

.hamburger {
    @media screen and (min-width: 1024px) {
        display: none;
    }
    display: block;
    cursor: pointer;
    z-index: 9999;

    div {
        display: block;
        width: 26px;
        height: 3px;
        margin: 5px 0;
        background-color: $black;
        border-radius: 3px;
        transition: 0.27s ease;
    }

    &.active {
        div {
            &:first-child {
                transform: rotate(-45deg) translate(0px, px);
            }

            // &:nth-child(2) {
            //     width: 0;
            //     opacity: 0;
            // }

            &:last-child {
                transform: rotate(45deg) translate(-5px, -6px);
            }
        }
    }
}

